# imager

./: CHANGELOG.md  LICENSE  README.md  format.sh  imager.cabal
.github/workflows/: ci.yml
app/: Main.hs
benchmark/: Main.hs
src/: Imager.hs
src/Imager/: Image.hs  Pt.hs  Rect.hs  Sampler.hs  Samples.hs  Util.hs
test/: Spec.hs
test/Imager/: RectTest.hs
