cabal-version:       2.4
name:                imager
version:             0.0.0.0
synopsis:            See README for more info
description:
    See README for more info.
    See [README.md](https://github.com/lancelet/imager#imager) for more details.
homepage:            https://github.com/lancelet/imager
bug-reports:         https://github.com/lancelet/imager/issues
license:             MIT
license-file:        LICENSE
author:              Jonathan Merritt
maintainer:          Jonathan Merritt <j.s.merritt@gmail.com>
copyright:           2021 Jonathan Merritt
category:            Graphics
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.2.1
                     GHC == 8.10.7


source-repository head
  type:                git
  location:            https://github.com/lancelet/imager.git

common common-options
  build-depends:       base >= 4.14.3.0 && < 5

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Imager

executable imager
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       imager
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite imager-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       imager
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark imager-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       imager
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
